[gd_scene load_steps=10 format=3 uid="uid://fms2q5w5nswo"]

[ext_resource type="Script" uid="uid://bgwet1uuonegw" path="res://scripts/start_screen.gd" id="1_hm208"]
[ext_resource type="Theme" uid="uid://bl4hu5la863p3" path="res://themes/label.tres" id="1_o7i0r"]
[ext_resource type="Theme" uid="uid://42um7cqohplm" path="res://themes/button.tres" id="2_he1sj"]
[ext_resource type="PackedScene" uid="uid://bh5xq71erjeow" path="res://scenes/dragon.tscn" id="2_r2jwc"]
[ext_resource type="Texture2D" uid="uid://djsmm1fvayngy" path="res://assets/sky.png" id="3_he1sj"]
[ext_resource type="PackedScene" uid="uid://xcqliphueso" path="res://scenes/gold_ui.tscn" id="4_5pab1"]

[sub_resource type="Animation" id="Animation_xeevv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r2jwc"]
resource_name = "start_screen"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.49803922), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbwuq"]
_data = {
&"RESET": SubResource("Animation_xeevv"),
&"start_screen": SubResource("Animation_r2jwc")
}

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_hm208")

[node name="Sky" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("3_he1sj")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 272, 160)

[node name="Dragon" parent="." instance=ExtResource("2_r2jwc")]
position = Vector2(38, 70)
is_start_screen = true

[node name="GoldUI" parent="." instance=ExtResource("4_5pab1")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -59.5
offset_right = 28.0
offset_bottom = -36.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(26, 10)
theme = ExtResource("1_o7i0r")
text = "Flappy Dragon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -12.5
offset_right = 26.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_he1sj")
text = "Start Game"

[node name="ShopButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 12.5
offset_right = 26.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_he1sj")
text = "Shop"

[node name="QuitButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 37.5
offset_right = 26.0
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_he1sj")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_tbwuq")
}
autoplay = "start_screen"

[node name="HighScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_right = 15.0
offset_bottom = 29.0
grow_horizontal = 2
theme = ExtResource("1_o7i0r")
text = "0"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_quit_button_pressed"]
